fixed a lot of details

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <h1> Hi, I'm Irene! </h1>
       <h2> Recent Computer Science graduate from UC San Diego based in Los Angeles. </h2>
       <h2> Aspiring product designer and web developer who aims to create impactful experiences.  </h2>
-      <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow">Time in Los Angeles</a>
+      <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
     </div>
@@ -117,7 +117,8 @@
 
         <div class="section-title">
           <!-- <h2> About </h2> -->
-          <h3> About <span> Irene </span> </h3>
+          <!-- <h3> About <span> Irene </span> </h3> -->
+          <h3> About Irene </h3>
           <p>  </p> 
         </div>
 
@@ -146,7 +147,7 @@
               Hi, I'm Irene!
             </p>
             <p style="font-size:100%">
-              <a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank"> View my resume here! </a>
+              <a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" class="class1" target="_blank"> View my resume here! </a>
             </p>
           </div>
 
@@ -239,7 +240,7 @@
               <h4> COVID-Code </h4>
               <!-- <p> comment </p> -->
               <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a> -->
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
             </div>
           </div>
 
@@ -251,7 +252,7 @@
               <!-- <p> comment </p> -->
               <!-- extra plus icon to get enlarged image of cover -->
               <!-- <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a> -->
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
             </div>
           </div>
           
@@ -263,7 +264,7 @@
               <h4> COVID-Code </h4>
                <!-- <p> comment </p> -->
               <!-- <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a> --> 
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
             </div>
           </div>
 
@@ -452,8 +453,11 @@
 
         <div class="section-title">
           <!-- <h2>Contact</h2> -->
-          <h3>Contact <span>Irene</span></h3>
-          <h4> irenelue01@gmail.com </h4>
+          <h3>Contact Irene </h3>
+          <!-- <h3>Contact <span>Irene</span></h3> -->
+          <h4> 
+            <a href=mailto: irenelue01@gmail.com?subject="HTML link" class="class1">irenelue01@gmail.com </a>
+          </h4>
           <p style="font-size:100%">If you'd like to work together or have any questions, <br>
             let's get in touch and I'll get back to you as soon as I can! </p>
         </div>
@@ -463,10 +467,10 @@
         
         <div class="section-contact">
           <div class="email">
-            <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
-            <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
-            <a href="https://dribbble.com/irenelue/collections" target="_blank"><i class="fas fa-basketball-ball"></i></a>
-            <a href="https://medium.com/@irenelue" target="_blank"><i class="fab fa-medium-m" ></i></a>
+            <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
+            <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fas fa-basketball-ball"></i></a>
+            <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a>
           </div>
         </div>
 
@@ -586,11 +590,11 @@
   </footer><!-- End Footer -->
 
   <!-- consistent buttons scrolling throughout pages -->
-  <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
-  <a href="https://github.com/irenelue" target="_blank" class="consistent-button d-flex align-items-center justify-content-center"><i class="bi bi-github"></i></a>
+  <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+  <a href="https://github.com/irenelue" target="_blank" class="consistent-button d-flex align-items-center justify-content-center" title="GitHub"><i class="bi bi-github"></i></a>
 <!--   <a href="https://dribbble.com/irenelue/collections" target="_blank" class="consistent-buttonD d-flex align-items-center justify-content-center"><i class="fas fa-basketball-ball"></i></a>
   <a href="https://medium.com/@irenelue" target="_blank"><i class="fab fa-medium-m" ></i></a> -->
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to Home"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
