--- a/index.html
+++ b/index.html
@@ -236,37 +236,39 @@
           <!-- Finance -->
           <div class="col-lg-6 col-md-6 portfolio-item filter-finance">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <!-- future: add swiping feature for each case study -->
             <div class="portfolio-info">
               <h4> COVID-Code </h4>
-              <!-- <p> comment </p> -->
-              <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a> -->
+              <p> Designing an iOS application capable of determining a user’s COVID-19 risk level and probability of contracting the virus. </p>
               <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
-            </div>
+            </div> 
+
           </div>
 
+          <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 3RD CASE STUDY -->
           <!-- Games -->
-         <div class="col-lg-6 col-md-6 portfolio-item filter-games">
+<!--          <div class="col-lg-6 col-md-6 portfolio-item filter-games">
             <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4> Pomodoro Player </h4>
-              <!-- <p> comment </p> -->
-              <!-- extra plus icon to get enlarged image of cover -->
-              <!-- <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a> -->
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
+              <!-- <p> comment </p> 
+              extra plus icon to get enlarged image of cover
+              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a> -->
+              <!-- <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
             </div>
-          </div>
+          </div> -->
           
           <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 3RD CASE STUDY -->
           <!-- Design -->
-          <div class="col-lg-6 col-md-6 portfolio-item filter-design">
+<!--           <div class="col-lg-6 col-md-6 portfolio-item filter-design">
             <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4> COVID-Code </h4>
-               <!-- <p> comment </p> -->
-              <!-- <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a> --> 
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
+               <!-- <p> comment </p>
+              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a> --> 
+              <!-- <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
             </div>
-          </div>
+          </div> -->
 
           
       </div>
