--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -90,7 +90,7 @@
       <div class="container">
 
         <ol>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="class1">Home</a></li>
           <li>Portfolio Details</li>
         </ol>
         <h2>Portfolio Details</h2>
@@ -105,6 +105,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
+            <!-- swiping photos starts here-->
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
 
@@ -123,6 +124,7 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
+            <!-- swiping photos ends here -->
           </div>
 
           <div class="col-lg-4">
