--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <h1> Hi, I'm Irene! </h1>
-      <h2> Recent Computer Science graduate from UC San Diego based in Los Angeles. </h2>
-      <h2> Aspiring product designer and web developer who aims to create impactful experiences.  </h2>
+      <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2>
+      <h2> Aspiring product designer and developer who aims to create impactful experiences.</h2>
       <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -134,7 +134,7 @@
                <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member">
                   <div class="member-img text-center">
-                    <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
+                    <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid rounded-circle" alt=""> 
                   </div>
                 </div>
               </div>
@@ -234,7 +234,7 @@
 
         <div class="row portfolio-container">
           <!-- Finance -->
-          <div class="col-lg-6 col-md-6 portfolio-item filter-finance">
+          <div class="col-lg-6 col-md-6 portfolio-item filter-finance" class="img-fluid">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <!-- future: add swiping feature for each case study -->
             <div class="portfolio-info">
@@ -242,7 +242,6 @@
               <p> Designing an iOS application capable of determining a user’s COVID-19 risk level and probability of contracting the virus. </p>
               <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
             </div> 
-
           </div>
 
           <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 3RD CASE STUDY -->
@@ -269,8 +268,6 @@
               <!-- <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
             </div>
           </div> -->
-
-          
       </div>
     </section> <!-- End Portfolio Section -->
 
