--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
         <div class="row portfolio-container">
           <!-- Finance -->
-          <div class="col-lg-6 col-md-6 portfolio-item filter-finance" class="img-fluid">
+          <div class="col-md-6 col-md-6 portfolio-item filter-finance" class="img-fluid">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <!-- future: add swiping feature for each case study -->
             <div class="portfolio-info">
