--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="portfolio-info">
               <h4> COVID-Code </h4>
               <p> Designing an iOS application capable of determining a user’s COVID-19 risk level and probability of contracting the virus. </p>
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
             </div> 
           </div>
 
