--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member">
                   <div class="member-img text-center">
-                    <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid rounded-circle" alt=""> 
+                    <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
                   </div>
                 </div>
               </div>
