--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                 <div class="member">
                   <div class="member-img text-center">
                     <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
+                                                                     <!-- class="img-fluid rounded-circle" -->
                   </div>
                 </div>
               </div>
