removed contact page and moved contact links to footer sect

--- a/index.html
+++ b/index.html
@@ -568,8 +568,8 @@
       </div>
     </div> -->
 
-    <div class="container d-md-flex py-4">
- 
+
+      <div class="me-md-auto text-center text-md-start">
         <!-- <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
@@ -582,10 +582,11 @@
       <div class="section-contact">
         <div class="me-md-auto text-center text-md-start">
           <div class="email">
+            <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
             <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
             <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
             <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fas fa-basketball-ball"></i></a>
-            <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a>
+            <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
           </div>
         </div>
       </div>
@@ -595,6 +596,7 @@
           <strong><span>Copyright</span></strong> &copy; <strong><span>Irene Lue</span></strong> 
         </div>
       </div>
+
     <!-- given for social media links at bottom right corner -->
     <!-- <div class="social-links text-center text-md-right pt-3 pt-md-0">
       <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -606,13 +608,15 @@
       </div> -->
     
     </div>
+
+    
   </footer><!-- End Footer -->
 
   <!-- consistent buttons scrolling throughout pages -->
-  <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
-  <a href="https://github.com/irenelue" target="_blank" class="consistent-button d-flex align-items-center justify-content-center" title="GitHub"><i class="bi bi-github"></i></a>
-<!--   <a href="https://dribbble.com/irenelue/collections" target="_blank" class="consistent-buttonD d-flex align-items-center justify-content-center"><i class="fas fa-basketball-ball"></i></a>
-  <a href="https://medium.com/@irenelue" target="_blank"><i class="fab fa-medium-m" ></i></a> -->
+  <!-- <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonD d-flex align-items-center justify-content-center" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
+  <!-- <a href="https://github.com/irenelue" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center" title="GitHub"><i class="bi bi-github"></i></a> -->
+  <!-- <a href="https://dribbble.com/irenelue/collections" target="_blank" class="consistent-button d-flex align-items-center justify-content-center"><i class="fas fa-basketball-ball"></i></a> -->
+<!--   <a href="https://medium.com/@irenelue" target="_blank"><i class="fab fa-medium-m" ></i></a> -->
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to Home"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
