--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <h1> Hi, I'm Irene! </h1>
-      <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2>
-      <h2> Aspiring product designer and developer who aims to create impactful experiences.</h2>
+      <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
+      <h2> I'm an aspiring product designer and <br> developer who has a love for simplicity. </h2>
       <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -172,7 +172,7 @@
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <!-- <h3>Check Out <span> My Portfolio</span></h3> -->
-          <h3>Featured Projects</h3>
+          <!-- <h3>Featured Projects</h3> -->
           <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
         </div>
 
