appearance-wise, looks solid so far

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,
       400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,600,600i,700,700i|
       Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-      
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -191,13 +190,16 @@
         <div class="row portfolio-container">
           <!-- Finance -->
           <div class="col-md-6 col-md-6 portfolio-item filter-finance" class="img-fluid">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <a href="portfolio-details.html" target="blank">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            </a>
+
             <!-- future: add swiping feature for each case study -->
-            <div class="portfolio-info">
+            <!-- <div class="portfolio-info">
               <h4> COVID-Code </h4>
               <p> Designing an iOS application capable of determining a user’s COVID-19 risk level and probability of contracting the virus. </p>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
-            </div> 
+            </div>  --> 
           </div>
 
           <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 3RD CASE STUDY -->
