changed font and footer layout

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,
       400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|
       Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,
       400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,600,600i,700,700i|
-      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -90,15 +94,14 @@
   </header><!-- End Header -->
 
   
-
   <!-- ======= Hero Section ======= -->
   <section id="hero">
 
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
-      <h1> Hi, I'm Irene! </h1>
+      <h1> Hey, I'm Irene! </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
-      <h2> I'm an aspiring product designer and <br> developer who has a love for simplicity. </h2>
+      <h2> I'm a recent Computer Science graduate from UC San Diego based in Los Angeles. <br> <br> </h2>
       <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -171,6 +174,7 @@
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <!-- <h3>Check Out <span> My Portfolio</span></h3> -->
+          <h3> What I've been working on <br> <br> </h3>
           <!-- <h3>Featured Projects</h3> -->
           <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
         </div>
@@ -190,9 +194,15 @@
         <div class="row portfolio-container">
           <!-- Finance -->
           <div class="col-md-6 col-md-6 portfolio-item filter-finance" class="img-fluid">
-            <a href="portfolio-details.html" target="blank">
+            <a href="portfolio-details.html" target="blank" title="COVID-Code Case Study">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              
             </a>
+
+          <div class="img-with-text"> 
+            <p> COVID-Code </p>
+          </div>
+            
 
             <!-- future: add swiping feature for each case study -->
             <!-- <div class="portfolio-info">
@@ -582,7 +592,7 @@
       </div>
 
       <div class="section-contact">
-        <div class="me-md-auto text-center text-md-start">
+        <div class="me-md-auto text-center">
           <div class="email">
             <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
             <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
@@ -593,7 +603,7 @@
         </div>
       </div>
 
-      <div class="me-md-auto text-center text-md-start">
+      <div class="me-md-auto text-center">
         <div class="copyright">
           <strong><span>Copyright</span></strong> &copy; <strong><span>Irene Lue</span></strong> 
         </div>
