--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -17,9 +17,13 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,
       400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|
       Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,
       400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,600,600i,700,700i|
-      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+      Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
+
+      <link rel="preconnect" href="https://fonts.googleapis.com"> 
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -49,17 +53,17 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">IL</a></h1>
+      <h1 class="logo"><a href="index.html"> IL </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="/#about">About</a></li>
           <li><a class="nav-link scrollto " href="/#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto " href="/#contact">Contact</a></li>
-
+          <li><a class="nav-link scrollto" href="/#about">About</a></li>
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
+          <!-- <li><a class="nav-link scrollto " href="/#contact">Contact</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -352,8 +356,8 @@
       </div>
   </div>
 
-  <div class="section-contact">
-    <div class="me-md-auto text-center text-md-start">
+  <div class="section-contact-port">
+    <div class="me-md-auto text-center">
       <div class="email">
         <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
         <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
@@ -364,7 +368,7 @@
     </div>
   </div>
 
-  <div class="me-md-auto text-center text-md-start">
+  <div class="me-md-auto text-center">
     <div class="copyright">
       <strong><span>Copyright</span></strong> &copy; <strong><span>Irene Lue</span></strong> 
     </div>
