--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top ">
+  <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> IL </a></h1>
+      <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -99,10 +99,10 @@
 
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
-      <h1> Hey, I'm Irene! </h1>
+      <h1> Hi, I'm Irene! </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
       <h2> I'm a recent Computer Science graduate from UC San Diego based in Los Angeles. <br> <br> </h2>
-      <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
+      <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a> -->
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
     </div>
@@ -174,7 +174,7 @@
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <!-- <h3>Check Out <span> My Portfolio</span></h3> -->
-          <h3> What I've been working on <br> <br> </h3>
+          <h3> What I've been working on <br> </h3>
           <!-- <h3>Featured Projects</h3> -->
           <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
         </div>
@@ -271,7 +271,7 @@
            </div> 
   
            <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
-              <p style="font-size:120%">
+              <p style="font-size:100%">
                 Hi, I'm Irene! <br>
                 <br>
                 If you'd like to work together or have any questions, let's get in 
@@ -629,7 +629,7 @@
   <!-- <a href="https://github.com/irenelue" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center" title="GitHub"><i class="bi bi-github"></i></a> -->
   <!-- <a href="https://dribbble.com/irenelue/collections" target="_blank" class="consistent-button d-flex align-items-center justify-content-center"><i class="fas fa-basketball-ball"></i></a> -->
 <!--   <a href="https://medium.com/@irenelue" target="_blank"><i class="fab fa-medium-m" ></i></a> -->
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to Home"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to top"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
