need to start filling it up

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <h1> Hi, I'm Irene! </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
-      <h2> I'm a recent Computer Science graduate from UC San Diego based in Los Angeles. <br> <br> </h2>
+      <h2> I'm a recent Computer Science graduate from UC San Diego <br> <br> with a fascination for simple and empowering design. <br> <br> </h2>
       <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a> -->
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -192,18 +192,14 @@
         </div>  -->
 
         <div class="row portfolio-container">
-          <!-- Finance -->
+          <!-- Proj 1: Covid-Code -->
           <div class="col-md-6 col-md-6 portfolio-item filter-finance" class="img-fluid">
-            <a href="portfolio-details.html" target="blank" title="COVID-Code Case Study">
+            <a href="portfolio-details.html" target="blank" title="Case Study: COVID-Code">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              
             </a>
-
-          <div class="img-with-text"> 
-            <p> COVID-Code </p>
-          </div>
-            
-
+            <div class="img-with-text"> 
+              <p> COVID-Code </p>
+            </div>
             <!-- future: add swiping feature for each case study -->
             <!-- <div class="portfolio-info">
               <h4> COVID-Code </h4>
@@ -214,10 +210,13 @@
 
           <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 3RD CASE STUDY -->
           <!-- Games -->
-<!--          <div class="col-lg-6 col-md-6 portfolio-item filter-games">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4> Pomodoro Player </h4>
+          <div class="col-lg-6 col-md-6 portfolio-item filter-games">
+            <a href="portfolio-details2.html" target="blank" title="Case Study: Project 2">
+              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            </a>
+            <div class="img-with-text"> 
+              <p> Project 2 </p>
+            </div>
               <!-- <p> comment </p> 
               extra plus icon to get enlarged image of cover
               <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a> -->
