--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -99,7 +99,7 @@
 
         <ol>
           <li><a href="index.html" class="class1">Home</a></li>
-          <li>Project Details</li>
+          <li>Covid-Code Details</li>
           <!-- add on RHS corner: Read Next: ... -->
         </ol>
         <!-- <h2>Portfolio Details</h2> -->
