--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 
       <div class="me-md-auto text-center">
         <div class="copyright">
-          <strong><span>Copyright</span></strong> &copy; <strong><span>Irene Lue</span></strong> 
+          <strong><span> </span></strong> &copy; <strong><span> Irene Lue 2022 </span></strong> 
         </div>
       </div>
 
