--- a/index.html
+++ b/index.html
@@ -90,12 +90,24 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
 
-    </div>
+    <!-- </div> -->
   </header><!-- End Header -->
 
   
   <!-- ======= Hero Section ======= -->
   <section id="hero">
+<!--       <div class="container d-flex align-items-center justify-content-between">
+        <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
+      </div>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="#about">About</a></li>
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav> <!-- .navbar -->
 
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
