adding separate about me page, basically home page CLEANED UP

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Work</a></li>
           <li><a class="nav-link scrollto " href="#about">About</a></li>
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
@@ -186,7 +186,7 @@
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <!-- <h3>Check Out <span> My Portfolio</span></h3> -->
-          <h3> What I've been working on <br> </h3>
+          <!-- <h3> What I've been working on <br> </h3> -->
           <!-- <h3>Featured Projects</h3> -->
           <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
         </div>
