--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -60,7 +60,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto " href="/#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="/#portfolio">Work</a></li>
           <li><a class="nav-link scrollto" href="/#about">About</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
           <!-- <li><a class="nav-link scrollto " href="/#contact">Contact</a></li> -->
