added about me page

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -59,8 +59,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto " href="/#portfolio">Work</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto active" href="/#portfolio">Work</a></li>
           <li><a class="nav-link scrollto" href="/#about">About</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
           <!-- <li><a class="nav-link scrollto " href="/#contact">Contact</a></li> -->
@@ -97,15 +97,15 @@
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
-        <ol>
+        <!-- <ol>
           <li><a href="index.html" class="class1">Home</a></li>
           <li>COVID-Code</li>
-          <!-- add on RHS corner: Read Next: ... -->
-        </ol>
+          <!-- add on RHS corner: Read Next: ...
+        </ol> -->
         <!-- <h2>Portfolio Details</h2> -->
 
       </div>
-    </section><!-- End Breadcrumbs -->
+    </section> <!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
     <!-- <section id="portfolio-details" class="portfolio-details">
