--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Work</a></li>
-          <li><a class="nav-link scrollto " href="#about">About</a></li>
+          <li><a href="aboutme.html" target="blank">About</a></li>
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
           <!-- <li><a class="nav-link scrollto " href="#contact">Contact</a></li> -->
