--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Work</a></li>
-          <li><a href="aboutme.html" target="blank">About</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Work</a></li>
+          <li><a href="aboutme.html">About</a></li>
           <!-- <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
