changed work page from 2 cols to 3 cols

--- a/index.html
+++ b/index.html
@@ -188,21 +188,9 @@
           <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
         </div>
 
-        <!-- 09/22/21 - took out filter for now -->
-<!--         <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-finance">Finance</li>
-              <li data-filter=".filter-games">Games</li>
-              <li data-filter=".filter-design">Design</li>
-            </ul>
-          </div>
-        </div>  -->
-
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
-          <div class="col-md-6 col-md-6 portfolio-item filter-finance" class="img-fluid">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-finance" class="img-fluid">
             <a href="portfolio-details.html" target="blank" title="Case Study: COVID-Code">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             </a>
@@ -217,24 +205,25 @@
             </div>  --> 
           </div>
 
-          <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 3RD CASE STUDY -->
-          <!-- Games -->
-          <div class="col-lg-6 col-md-6 portfolio-item filter-games">
-            <a href="portfolio-details2.html" target="blank" title="Case Study: Project 2">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+          <!-- Proj 2 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-games" class="img-fluid">
+            <a href="portfolio-details2.html" target="blank" title="Project 2">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             </a>
             <div class="img-with-text"> 
               <p> Project 2 </p>
             </div>
-              <!-- <p> comment </p> 
-              extra plus icon to get enlarged image of cover
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a> -->
-              <!-- <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
+          </div>
+
+          <!-- Proj 3 -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <a href="portfolio-details3.html" target="blank" title="Project 3">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            </a>
+            <div class="img-with-text"> 
+              <p> Project 3 </p>
             </div>
-          </div> -->
-          
-          <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 3RD CASE STUDY -->
-          <!-- Design -->
+          </div>
 <!--           <div class="col-lg-6 col-md-6 portfolio-item filter-design">
             <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
