took out scrolling arrow

--- a/index.html
+++ b/index.html
@@ -578,8 +578,10 @@
   <!-- <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonD d-flex align-items-center justify-content-center" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
   <!-- <a href="https://github.com/irenelue" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center" title="GitHub"><i class="bi bi-github"></i></a> -->
   <!-- <a href="https://dribbble.com/irenelue/collections" target="_blank" class="consistent-button d-flex align-items-center justify-content-center"><i class="fas fa-basketball-ball"></i></a> -->
-<!--   <a href="https://medium.com/@irenelue" target="_blank"><i class="fab fa-medium-m" ></i></a> -->
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to top"><i class="bi bi-arrow-up-short"></i></a>
+  <!--   <a href="https://medium.com/@irenelue" target="_blank"><i class="fab fa-medium-m" ></i></a> -->
+  
+  <!-- 01/28/22: Removing bottom right, scroll back up arrow -->
+  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to top"><i class="bi bi-arrow-up-short"></i></a> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
