--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -389,8 +389,10 @@
 <!-- consistent buttons scrolling throughout pages -->
 <!-- <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
 <a href="https://github.com/irenelue" target="_blank" class="consistent-button d-flex align-items-center justify-content-center"><i class="bi bi-github"></i></a> -->
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to top"><i class="bi bi-arrow-up-short"></i></a>
 
+<!-- 01/28/22: Removing bottom right, scroll back up arrow -->
+<!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to top"><i class="bi bi-arrow-up-short"></i></a> -->
+ 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
