--- a/index.html
+++ b/index.html
@@ -190,9 +190,17 @@
 
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-finance" class="img-fluid">
-            <a href="portfolio-details.html" target="blank" title="Case Study: COVID-Code">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
+            <a href="portfolio-details.html" target="blank" title="COVID-Code">
+              <div class="image">
+                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                <div class="image_overlay">
+                    <div class="image_title">COVID-Code</div>
+                    <p class="image_description">
+                        UX + UI Design
+                    </p>
+                </div>
+              </div>
             </a>
             <div class="img-with-text"> 
               <p> COVID-Code </p>
