changed all portfolio thumbnails+title to hover feature

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
                 </div>
               </div>
             </a>
-            <div class="img-with-text"> 
+            <!-- <div class="img-with-text"> 
               <p> COVID-Code </p>
-            </div>
+            </div> -->
             <!-- future: add swiping feature for each case study -->
             <!-- <div class="portfolio-info">
               <h4> COVID-Code </h4>
@@ -214,23 +214,39 @@
           </div>
 
           <!-- Proj 2 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-games" class="img-fluid">
+          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="portfolio-details2.html" target="blank" title="Project 2">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <div class="image">
+                <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                <div class="image_overlay">
+                    <div class="image_title">Project 2</div>
+                    <p class="image_description">
+                        UX + UI Design
+                    </p>
+                </div>
+              </div>
             </a>
-            <div class="img-with-text"> 
-              <p> Project 2 </p>
-            </div>
+            <!-- <div class="img-with-text"> 
+              <p> COVID-Code </p>
+            </div> -->
           </div>
 
           <!-- Proj 3 -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="portfolio-details3.html" target="blank" title="Project 3">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <div class="image">
+                <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                <div class="image_overlay">
+                    <div class="image_title">Project 2</div>
+                    <p class="image_description">
+                        UX + UI Design
+                    </p>
+                </div>
+              </div>
             </a>
-            <div class="img-with-text"> 
-              <p> Project 3 </p>
-            </div>
+            <!-- <div class="img-with-text"> 
+              <p> COVID-Code </p>
+            </div> -->
           </div>
 <!--           <div class="col-lg-6 col-md-6 portfolio-item filter-design">
             <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
