--- a/aboutme.html
+++ b/aboutme.html
@@ -172,7 +172,8 @@
   </div>
 </footer><!-- End Footer -->
 
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to top"><i class="bi bi-arrow-up-short"></i></a>
+  <!-- 01/28/22: Removing this
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center" title="Back to top"><i class="bi bi-arrow-up-short"></i></a> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
