updated about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -104,39 +104,40 @@
                   <div class="container-fluid">
                     <div class="row-fluid">
                       <!-- team-0 profile picture -->
-                      <div class="col-lg-9 col-md-8 mx-auto">
+                      <div class="col-lg-9 col-md-9 mx-auto">
                         <!-- team-00 profile picture -->
                         <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
-                        <div class="member">
-                          <div class="member-img text-center">             <!-- class="img-fluid rounded-circle" --> 
-                            <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
-                          </div>
+                        <div class="member-img">             <!-- class="img-fluid rounded-circle" --> 
+                          <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
                         </div>
                       </div>
                     </div>
                   </div>
                 </div> 
       
-                <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
-                  <p style="font-size:200%">
-                    Hi, I'm Irene! 
-                  <p>
-                  <p>
+                <div class="col-lg-6 pt-4 pt-md-1 mx-auto">
+                  <div class="about-title">
+                    <!-- <p style="font-size:200%"> -->
+                      Hi, I'm Irene!
+                    <!-- <p> -->
+                  </div>
+                  <div class ="about-paragraph">
                     I’m a recent Computer Science graduate from UC San Diego 
                     fascinated by thoughtful design that
                     helps people to live more fulfilling lives. I believe 
                     in crafting practical solutions that solves problems and 
-                    empowers people to become the best version that they can be. 
+                    empowers people to become the best version they can be. 
                     <br> <br>
-                    Aside from design, I’m a big animal lover and I enjoy running
+                    Aside from design, I'm a big animal lover and I enjoy running
                     and exploring the outdoors. 
                     <br> <br> 
-                    I'm always excited to learn and collaborate. If you’d like 
-                    to work together, let’s get in touch! 
-                  </p>
-                  <p> You can check out my full resume
-                    <a class="cta-btn" href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" style="color:blue" target="_blank"><u>here</u></a>!
-                  </p>
+                    <!-- I'm always excited to collaborate. If you’d like 
+                    to work together, let’s get in touch!
+                    <br> <br> -->
+                    You can view my full resume
+                    <a class="cta-btn" href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" 
+                    style="color:blue" target="_blank"><u>here</u></a>!
+                  </div>
                 </div>
               </div>
           </section> <!-- End About Section -->
