--- a/aboutme.html
+++ b/aboutme.html
@@ -135,8 +135,8 @@
                     design, I'm a big animal lover and I like to stay active by 
                     running and exploring the outdoors. 
                     <br> <br>
-                    I'm always excited to collaborate. If you’d like 
-                    to work together or have questions, let’s get in touch!
+                    I'm always excited to collaborate and build new experiences. 
+                    If you’d like to work together, let’s get in touch!
                     <br> <br>
                   </div>
                   <div class = "about-link"> 
