--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
-
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <!-- <h3>Check Out <span> My Portfolio</span></h3> -->
@@ -188,21 +187,21 @@
           <!-- <h3>Featured Projects</h3> -->
           <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
         </div>
-
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="portfolio-details.html" target="blank" title="COVID-Code">
+            <a href="portfolio-details.html" target="blank" title="Project 1">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title">COVID-Code</div>
+                    <div class="image_title">Project 1</div>
                     <p class="image_description">
                         UX + UI Design
                     </p>
                 </div>
               </div>
             </a>
+          </div>
             <!-- <div class="img-with-text"> 
               <p> COVID-Code </p>
             </div> -->
@@ -211,8 +210,8 @@
               <h4> COVID-Code </h4>
               <p> Designing an iOS application capable of determining a user’s COVID-19 risk level and probability of contracting the virus. </p>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
-            </div>  --> 
-          </div>
+            </div> 
+          </div> -->
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
@@ -227,9 +226,6 @@
                 </div>
               </div>
             </a>
-            <!-- <div class="img-with-text"> 
-              <p> COVID-Code </p>
-            </div> -->
           </div>
 
           <!-- Proj 3 -->
@@ -248,16 +244,8 @@
             <!-- <div class="img-with-text"> 
               <p> COVID-Code </p>
             </div> -->
-          </div>
-<!--           <div class="col-lg-6 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4> COVID-Code </h4>
-               <!-- <p> comment </p>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a> --> 
-              <!-- <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
-            </div>
-          </div> -->
+          </div> <!-- End: Proj 3-->
+        </div>
       </div>
     </section> <!-- End Portfolio Section -->
 
