--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
+      <h1 class="logo"><a href="index.html"> IL </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -170,9 +170,10 @@
               <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
               <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
               <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
-              <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fas fa-basketball-ball"></i></a>
+              <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fas fa-basketball-ball"></i></a> -->
               <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
-              <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
+              <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
+              <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a>
               <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
             </div>
           </div>
@@ -180,7 +181,7 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:black;font-size:12px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <h1 style="color:#0000003a;font-size:12px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
           </div>
         </div>
       </div>
