--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -99,11 +99,11 @@
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
-        <ol>
+        <!-- <ol>
           <li><a href="index.html" class="class1">Home</a></li>
-          <li>Project 3 Details</li>
-          <!-- add on RHS corner: Read Next: ... -->
-        </ol>
+          <li>Project 3 Details</li> -->
+          <!-- add on RHS corner: Read Next: ...
+        </ol> --> 
         <!-- <h2>Portfolio Details</h2> -->
 
       </div>
@@ -327,7 +327,7 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#0000003a;font-size:12px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <h1 style="color:#00000048;font-size:12px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
           </div>
         </div>
       </div>
