--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <h1> Irene Lue </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
       <h2> Recent Computer Science graduate from UC San Diego <br>
-      fascinated by thoughtful + innovative design </h2> 
+      Fascinated by thoughtful + innovative design </h2> 
       <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a> -->
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
